; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/hhctrl.ocx/extr_content.c_parse_obj_node_param.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/hhctrl.ocx/extr_content.c_parse_obj_node_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_6__, i8*, i8* }
%struct.TYPE_6__ = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"name\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"name attr not found\0A\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"merge\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"local\00", align 1
@.str.4 = private unnamed_addr constant [20 x i8] c"unhandled param %s\0A\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"value\00", align 1
@.str.6 = private unnamed_addr constant [22 x i8] c"value attr not found\0A\00", align 1
@.str.7 = private unnamed_addr constant [3 x i8] c"::\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, %struct.TYPE_5__*, i8*, i32)* @parse_obj_node_param to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parse_obj_node_param(%struct.TYPE_5__* %0, %struct.TYPE_5__* %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8**, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %15 = load i8*, i8** %7, align 8
  %16 = call i8* @get_attr(i8* %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* %12)
  store i8* %16, i8** %9, align 8
  %17 = load i8*, i8** %9, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %21, label %19

19:                                               ; preds = %4
  %20 = call i32 (i8*, ...) @WARN(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  br label %104

21:                                               ; preds = %4
  %22 = load i8*, i8** %9, align 8
  %23 = load i32, i32* %12, align 4
  %24 = call i32 @_strnicmp(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %22, i32 %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %29, label %26

26:                                               ; preds = %21
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 2
  store i8** %28, i8*** %10, align 8
  br label %50

29:                                               ; preds = %21
  %30 = load i8*, i8** %9, align 8
  %31 = load i32, i32* %12, align 4
  %32 = call i32 @_strnicmp(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i8* %30, i32 %31)
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %35, label %34

34:                                               ; preds = %29
  store i8** %11, i8*** %10, align 8
  br label %49

35:                                               ; preds = %29
  %36 = load i8*, i8** %9, align 8
  %37 = load i32, i32* %12, align 4
  %38 = call i32 @_strnicmp(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0), i8* %36, i32 %37)
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %43, label %40

40:                                               ; preds = %35
  %41 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %41, i32 0, i32 1
  store i8** %42, i8*** %10, align 8
  br label %48

43:                                               ; preds = %35
  %44 = load i8*, i8** %9, align 8
  %45 = load i32, i32* %12, align 4
  %46 = call i32 @debugstr_an(i8* %44, i32 %45)
  %47 = call i32 (i8*, ...) @WARN(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.4, i64 0, i64 0), i32 %46)
  br label %104

48:                                               ; preds = %40
  br label %49

49:                                               ; preds = %48, %34
  br label %50

50:                                               ; preds = %49, %26
  %51 = load i8*, i8** %7, align 8
  %52 = call i8* @get_attr(i8* %51, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0), i32* %12)
  store i8* %52, i8** %9, align 8
  %53 = load i8*, i8** %9, align 8
  %54 = icmp ne i8* %53, null
  br i1 %54, label %57, label %55

55:                                               ; preds = %50
  %56 = call i32 (i8*, ...) @WARN(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.6, i64 0, i64 0))
  br label %104

57:                                               ; preds = %50
  %58 = load i8**, i8*** %10, align 8
  %59 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %60 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %59, i32 0, i32 1
  %61 = icmp eq i8** %58, %60
  br i1 %61, label %62, label %85

62:                                               ; preds = %57
  %63 = load i8*, i8** %9, align 8
  %64 = call i8* @strstr(i8* %63, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.7, i64 0, i64 0))
  %65 = icmp ne i8* %64, null
  br i1 %65, label %66, label %85

66:                                               ; preds = %62
  %67 = load i8*, i8** %9, align 8
  %68 = call i8* @strstr(i8* %67, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.7, i64 0, i64 0))
  %69 = getelementptr inbounds i8, i8* %68, i64 2
  store i8* %69, i8** %13, align 8
  %70 = load i32, i32* %12, align 4
  %71 = sext i32 %70 to i64
  %72 = load i8*, i8** %13, align 8
  %73 = load i8*, i8** %9, align 8
  %74 = ptrtoint i8* %72 to i64
  %75 = ptrtoint i8* %73 to i64
  %76 = sub i64 %74, %75
  %77 = sub nsw i64 %71, %76
  %78 = trunc i64 %77 to i32
  store i32 %78, i32* %14, align 4
  %79 = load i8*, i8** %13, align 8
  %80 = load i32, i32* %14, align 4
  %81 = load i32, i32* %8, align 4
  %82 = call i8* @decode_html(i8* %79, i32 %80, i32 %81)
  %83 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %84 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %83, i32 0, i32 1
  store i8* %82, i8** %84, align 8
  store i8** %11, i8*** %10, align 8
  br label %85

85:                                               ; preds = %66, %62, %57
  %86 = load i8*, i8** %9, align 8
  %87 = load i32, i32* %12, align 4
  %88 = load i32, i32* %8, align 4
  %89 = call i8* @decode_html(i8* %86, i32 %87, i32 %88)
  %90 = load i8**, i8*** %10, align 8
  store i8* %89, i8** %90, align 8
  %91 = load i8**, i8*** %10, align 8
  %92 = icmp eq i8** %91, %11
  br i1 %92, label %93, label %104

93:                                               ; preds = %85
  %94 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %95 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %94, i32 0, i32 0
  %96 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %97 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %96, i32 0, i32 0
  %98 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %97, i32 0, i32 0
  %99 = load i32, i32* %98, align 8
  %100 = load i8*, i8** %11, align 8
  %101 = call i32 @SetChmPath(%struct.TYPE_6__* %95, i32 %99, i8* %100)
  %102 = load i8*, i8** %11, align 8
  %103 = call i32 @heap_free(i8* %102)
  br label %104

104:                                              ; preds = %19, %43, %55, %93, %85
  ret void
}

declare dso_local i8* @get_attr(i8*, i8*, i32*) #1

declare dso_local i32 @WARN(i8*, ...) #1

declare dso_local i32 @_strnicmp(i8*, i8*, i32) #1

declare dso_local i32 @debugstr_an(i8*, i32) #1

declare dso_local i8* @strstr(i8*, i8*) #1

declare dso_local i8* @decode_html(i8*, i32, i32) #1

declare dso_local i32 @SetChmPath(%struct.TYPE_6__*, i32, i8*) #1

declare dso_local i32 @heap_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
